# MindScope

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  test_prediction.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: mongoDB.ipynb
src.egg-info/: PKG-INFO
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: __init__.py  aws_config.py  aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: data_exporter.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  prediction_transformer.py  training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: index.html
